--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
 Package: verdepcheck
-Title: Check package using various versions of dependencies.
+Title: Check package using various versions of dependencies
 Version: 0.0.0.9000
 Date: 2023-02-14
 Authors@R:
@@ -17,7 +17,8 @@ Imports:
     pkgcache,
     pkgdepends,
     rcmdcheck,
-    remotes
+    remotes,
+    utils
 Suggests:
     knitr,
     testthat (>= 3.0.0)
