--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,4 @@ importFrom(pkgdepends,parse_pkg_ref)
 importFrom(pkgdepends,pkg_dep_types)
 importFrom(rcmdcheck,rcmdcheck)
 importFrom(remotes,github_remote)
+importFrom(utils,installed.packages)
