--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -13,6 +13,7 @@ README.*
 ^staged_dependencies\.yaml$
 coverage.*
 ^\.pre-commit-config\.yaml$
+^\.markdownlint\.yaml$
 ^codemeta\.json$
 init.sh
 workflows.md
