--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
 Package: verdepcheck
-Title: Check package using various versions of dependencies
+Title: Check Package using Various Versions of Dependencies
 Version: 0.0.0.9000
 Date: 2023-02-14
 Authors@R:
