--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -25,10 +25,9 @@ jobs:
     secrets:
       REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
     with:
-      env:
-        GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       additional-env-vars: |
         _R_CHECK_CRAN_INCOMING_REMOTE_=false
+        GITHUB_PAT=${{ secrets.GITHUB_TOKEN }}
       additional-r-cmd-check-params: --as-cran
   coverage:
     name: Coverage 📔
