--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,7 +32,7 @@ repos:
           (.*/|)LICENSE|
           (.*/|)\.Rbuildignore|
           (.*/|)\.lintr|
-          (.*/|)_pkgdown.yaml|
+          (.*/|)_pkgdown.yml|
           (.*/|)staged_dependencies.yaml|
           (.*/|)\.pre-commit-.*|
           \.github/.*|
@@ -81,3 +81,7 @@ repos:
         language: fail
         files: '\.Rhistory|\.RData|\.Rds|\.rds$'
         # `exclude: <regex>` to allow committing specific files.
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.33.0
+    hooks:
+      - id: markdownlint
