--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,17 +12,17 @@ BugReports: https://github.com/insightsengineering/verdepcheck/issues
 Depends:
     R (>= 3.6)
 Imports:
-    desc,
+    desc (>= 1.2),
     gh,
-    pkgcache (>= 1.2.0),
-    pkgdepends,
+    pkgcache (>= 2.1.0),
+    pkgdepends (>= 0.5.0),
     rcmdcheck,
     remotes (>= 2.2.0),
     utils
 Suggests:
-    knitr (>= 1.34),
-    testthat (>= 3.0.0),
+    knitr (>= 1.42),
     pingr,
+    testthat (>= 3.0.0),
     withr (>= 2.4.3)
 Remotes:
     r-lib/desc@*release,
@@ -30,7 +30,11 @@ Remotes:
     r-lib/pkgcache@*release,
     r-lib/pkgdepends@*release,
     r-lib/rcmdcheck@*release,
-    r-lib/remotes@*release
+    r-lib/remotes@*release,
+    yihui/knitr@*release,
+    r-lib/pingr@*release,
+    r-lib/testthat@*release,
+    r-lib/withr@*release
 VignetteBuilder:
     knitr
 Encoding: UTF-8
