--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,4 +24,5 @@ importFrom(pkgdepends,new_pkg_installation_proposal)
 importFrom(pkgdepends,parse_pkg_ref)
 importFrom(rcmdcheck,rcmdcheck)
 importFrom(remotes,github_remote)
+importFrom(stats,setNames)
 importFrom(utils,installed.packages)
