enhance class names; export one more method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,9 @@ S3method(get_min_ver,remote_ref_github)
 S3method(get_min_ver,remote_ref_standard)
 S3method(get_min_ver_incl_cran,remote_ref)
 S3method(get_min_ver_incl_cran,remote_ref_github)
+S3method(solve_ignore_remotes_release,min_deps_installation_proposal)
+S3method(solve_ignore_remotes_release,pkg_deps)
 S3method(solve_ignore_remotes_release,pkg_installation_proposal)
-S3method(solve_ignore_remotes_release,verdepcheck_min_deps)
 export(max_deps_check)
 export(min_deps_check)
 export(new_max_deps_installation_proposal)
