rename get_ver_* into get_ref_*; try on solve()

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -25,8 +25,7 @@ reference:
     contents:
       - ends_with("_deps_installation_proposal")
 
-  - title: Minimal version
-    desc: Determine minimal version
+  - title: Find package reference
+    desc: Determine package reference for appropriate version
     contents:
-      - get_min_ver
-      - get_min_ver_incl_cran
+      - starts_with("get_ref_")
