--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(new_max_deps_installation_proposal)
 export(new_min_deps_installation_proposal)
 export(new_release_deps_installation_proposal)
 export(release_deps_check)
+importFrom(cli,cli_progress_bar)
+importFrom(cli,cli_progress_update)
 importFrom(desc,desc)
 importFrom(gh,gh)
 importFrom(gh,gh_gql)
@@ -22,6 +24,7 @@ importFrom(pkgcache,meta_cache_list)
 importFrom(pkgdepends,new_pkg_deps)
 importFrom(pkgdepends,new_pkg_installation_proposal)
 importFrom(pkgdepends,parse_pkg_ref)
+importFrom(pkgdepends,pkg_dep_types)
 importFrom(rcmdcheck,rcmdcheck)
 importFrom(remotes,github_remote)
 importFrom(stats,setNames)
