add training materials; few enhancements

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,6 +38,7 @@ repos:
           (.*/|)staged_dependencies.yaml|
           (.*/|)\.pre-commit-.*|
           \.github/.*|
+          inst/.*|
           .*\.[rR]|
           .*\.Rproj|
           .*\.py|
