--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ S3method(get_ref_min,remote_ref_standard)
 S3method(get_ref_min_incl_cran,remote_ref)
 S3method(get_ref_min_incl_cran,remote_ref_github)
 export(get_ref_max)
+export(get_ref_min)
+export(get_ref_min_incl_cran)
 export(get_ref_release)
 export(max_deps_check)
 export(min_deps_check)
@@ -16,6 +18,14 @@ export(new_release_deps_installation_proposal)
 export(release_deps_check)
 importFrom(cli,cli_progress_bar)
 importFrom(cli,cli_progress_update)
+importFrom(cli,col_green)
+importFrom(cli,pb_current)
+importFrom(cli,pb_elapsed)
+importFrom(cli,pb_eta)
+importFrom(cli,pb_extra)
+importFrom(cli,pb_spin)
+importFrom(cli,pb_total)
+importFrom(cli,symbol)
 importFrom(desc,desc)
 importFrom(gh,gh)
 importFrom(gh,gh_gql)
