redesign min strategy

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -25,6 +25,11 @@ reference:
     contents:
       - ends_with("_deps_installation_proposal")
 
+  - title: Installation Plan methods
+    desc: Methods on the installation plan objects
+    contents:
+      - ends_with("_ip")
+
   - title: Find package reference
     desc: Determine package reference for appropriate version
     contents:
