--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,16 +6,33 @@ S3method(get_ref_min,remote_ref_github)
 S3method(get_ref_min,remote_ref_standard)
 S3method(get_ref_min_incl_cran,remote_ref)
 S3method(get_ref_min_incl_cran,remote_ref_github)
+S3method(get_release_date,remote_ref)
+S3method(get_release_date,remote_ref_cran)
+S3method(get_release_date,remote_ref_github)
+S3method(get_release_date,remote_ref_standard)
+S3method(solve_ip,deps_installation_proposal)
+S3method(solve_ip,min_cohort_deps_installation_proposal)
+S3method(solve_ip,min_cohorts_deps_installation_proposal)
+export(check_ip)
+export(download_ip)
+export(execute_ip)
 export(get_ref_max)
 export(get_ref_min)
 export(get_ref_min_incl_cran)
 export(get_ref_release)
+export(get_release_date)
+export(install_ip)
 export(max_deps_check)
-export(min_deps_check)
+export(min_cohort_deps_check)
+export(min_cohorts_deps_check)
+export(min_direct_deps_check)
 export(new_max_deps_installation_proposal)
-export(new_min_deps_installation_proposal)
+export(new_min_cohort_deps_installation_proposal)
+export(new_min_cohorts_deps_installation_proposal)
+export(new_min_direct_deps_installation_proposal)
 export(new_release_deps_installation_proposal)
 export(release_deps_check)
+export(solve_ip)
 importFrom(cli,cli_progress_bar)
 importFrom(cli,cli_progress_update)
 importFrom(cli,col_green)
@@ -31,6 +48,8 @@ importFrom(gh,gh)
 importFrom(gh,gh_gql)
 importFrom(pkgcache,cran_archive_list)
 importFrom(pkgcache,meta_cache_list)
+importFrom(pkgcache,ppm_repo_url)
+importFrom(pkgcache,ppm_snapshots)
 importFrom(pkgdepends,new_pkg_deps)
 importFrom(pkgdepends,new_pkg_installation_proposal)
 importFrom(pkgdepends,parse_pkg_ref)
