rm min_direct; rename _cohorts into _isolated; move ppm logic into obj constructor

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,7 @@ S3method(get_release_date,remote_ref_cran)
 S3method(get_release_date,remote_ref_github)
 S3method(get_release_date,remote_ref_standard)
 S3method(solve_ip,deps_installation_proposal)
-S3method(solve_ip,min_cohort_deps_installation_proposal)
-S3method(solve_ip,min_cohorts_deps_installation_proposal)
+S3method(solve_ip,min_isolated_deps_installation_proposal)
 export(check_ip)
 export(download_ip)
 export(execute_ip)
@@ -24,12 +23,10 @@ export(get_release_date)
 export(install_ip)
 export(max_deps_check)
 export(min_cohort_deps_check)
-export(min_cohorts_deps_check)
-export(min_direct_deps_check)
+export(min_isolated_deps_check)
 export(new_max_deps_installation_proposal)
 export(new_min_cohort_deps_installation_proposal)
-export(new_min_cohorts_deps_installation_proposal)
-export(new_min_direct_deps_installation_proposal)
+export(new_min_isolated_deps_installation_proposal)
 export(new_release_deps_installation_proposal)
 export(release_deps_check)
 export(solve_ip)
@@ -50,6 +47,7 @@ importFrom(pkgcache,cran_archive_list)
 importFrom(pkgcache,meta_cache_list)
 importFrom(pkgcache,ppm_repo_url)
 importFrom(pkgcache,ppm_snapshots)
+importFrom(pkgdepends,as_pkg_dependencies)
 importFrom(pkgdepends,new_pkg_deps)
 importFrom(pkgdepends,new_pkg_installation_proposal)
 importFrom(pkgdepends,parse_pkg_ref)
