--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(new_min_isolated_deps_installation_proposal)
 export(new_release_deps_installation_proposal)
 export(release_deps_check)
 export(solve_ip)
+export(test_install_pkg_versions)
 importFrom(cli,cli_progress_bar)
 importFrom(cli,cli_progress_update)
 importFrom(cli,col_green)
