--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(get_ref_min_incl_cran)
 export(get_ref_release)
 export(get_release_date)
 export(install_ip)
+export(install_pkg_versions_tmp)
 export(max_deps_check)
 export(min_cohort_deps_check)
 export(min_isolated_deps_check)
