--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,15 +9,17 @@ repos:
         args: [--style_pkg=styler, --style_fun=tidyverse_style]
       - id: roxygenize
         additional_dependencies:
-          - r-lib/cli@*release
-          - r-lib/desc@*release
-          - r-lib/gh@*release
-          - r-lib/pkgcache@*release
-          - r-lib/pkgdepends@*release
-          - r-lib/rcmdcheck@*release
-          - r-lib/remotes@*release
+          - cli
+          - desc
+          - gh
+          - httr
+          - pkgcache
+          - pkgdepends
+          - rcmdcheck
+          - remotes
+          - stats
           - utils
-          - r-lib/zip@*release
+          - knitr
       # codemeta must be above use-tidy-description when both are used
       # -   id: codemeta-description-updated
       - id: use-tidy-description
