add stats::na.omit to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(pkgdepends,parse_pkg_refs)
 importFrom(pkgdepends,pkg_dep_types)
 importFrom(rcmdcheck,rcmdcheck)
 importFrom(remotes,github_remote)
+importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(utils,head)
 importFrom(utils,installed.packages)
