--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,11 @@ Package: verdepcheck
 Title: Check Package using Various Versions of Dependencies
 Version: 0.0.0.9000
 Date: 2023-02-14
-Authors@R:
+Authors@R: c(
     person("Pawel Rucki", , , "pawel.rucki@roche.com", role = c("aut", "cre")),
     person("Andre Verissimo", , , "andre.verissimo@roche.com", role = "aut"),
     person("F. Hoffmann-La Roche AG", role = c("cph", "fnd"))
+  )
 Description: Derive package dependencies from DESCRIPTION file using various strategies and run "R CMD CHECK" to validate package compatibility.
 License: Apache License 2.0 | file LICENSE
 URL: https://github.com/insightsengineering/verdepcheck/
