use tools instead

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,8 @@ Imports:
     pkgdepends (>= 0.5.0),
     rcmdcheck,
     remotes (>= 2.2.0),
-    rvest,
     stats,
+    tools,
     utils,
     withr (>= 2.4.3)
 Suggests:
@@ -37,7 +37,6 @@ Config/Needs/verdepcheck:
     r-lib/pkgdepends,
     r-lib/rcmdcheck,
     r-lib/remotes,
-    tidyverse/rvest,
     r-lib/withr,
     yihui/knitr,
     r-lib/pingr,
