rename get_cran_data to get_release_data; more accurate release date for bioc packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(cli,symbol)
 importFrom(desc,desc)
 importFrom(gh,gh)
 importFrom(gh,gh_gql)
+importFrom(jsonlite,fromJSON)
 importFrom(pkgcache,cran_archive_list)
 importFrom(pkgcache,meta_cache_list)
 importFrom(pkgcache,ppm_repo_url)
