--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
     cli (>= 3.6.0),
     desc (>= 1.2),
     gh,
+    jsonlite,
     pkgcache (>= 2.1.0),
     pkgdepends (>= 0.5.0),
     rcmdcheck,
@@ -34,6 +35,7 @@ Config/Needs/verdepcheck:
     r-lib/cli,
     r-lib/desc,
     r-lib/gh,
+    jeroen/jsonlite,
     r-lib/pkgcache,
     r-lib/pkgdepends,
     r-lib/rcmdcheck,
