--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(get_release_date,remote_ref)
 S3method(get_release_date,remote_ref_cran)
 S3method(get_release_date,remote_ref_github)
 S3method(get_release_date,remote_ref_standard)
+S3method(get_version,remote_ref)
 S3method(solve_ip,deps_installation_proposal)
 S3method(solve_ip,min_isolated_deps_installation_proposal)
 export(check_ip)
@@ -20,6 +21,7 @@ export(get_ref_min)
 export(get_ref_min_incl_cran)
 export(get_ref_release)
 export(get_release_date)
+export(get_version)
 export(install_ip)
 export(max_deps_check)
 export(min_cohort_deps_check)
@@ -47,6 +49,7 @@ importFrom(cli,symbol)
 importFrom(desc,desc)
 importFrom(gh,gh)
 importFrom(gh,gh_gql)
+importFrom(jsonlite,fromJSON)
 importFrom(pkgcache,cran_archive_list)
 importFrom(pkgcache,meta_cache_list)
 importFrom(pkgcache,ppm_repo_url)
