fix get_release_date for bioc packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(get_ref_min,remote_ref_standard)
 S3method(get_ref_min_incl_cran,remote_ref)
 S3method(get_ref_min_incl_cran,remote_ref_github)
 S3method(get_release_date,remote_ref)
+S3method(get_release_date,remote_ref_bioc)
 S3method(get_release_date,remote_ref_cran)
 S3method(get_release_date,remote_ref_github)
 S3method(get_release_date,remote_ref_standard)
