--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -34,6 +34,8 @@ jobs:
     secrets:
       REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
     with:
+      additional-env-vars: |
+        NOT_CRAN=true
       concurrency-group: non-cran
       unit-test-report-directory: unit-test-report-non-cran
   coverage:
