remove workaround; use devel of pkgcache

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Imports:
     desc (>= 1.2),
     gh,
     jsonlite,
-    pkgcache (>= 2.1.0),
+    pkgcache (>= 2.2.2.9000),
     pkgdepends (>= 0.5.0),
     rcmdcheck,
     remotes (>= 2.2.0),
@@ -32,6 +32,8 @@ Suggests:
     pingr,
     rmarkdown (>= 2.23),
     testthat (>= 3.0.4)
+Remotes:
+    r-lib/pkgcache
 Config/Needs/verdepcheck:
     r-lib/cli,
     r-lib/desc,
