--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,8 +53,7 @@ importFrom(gh,gh_gql)
 importFrom(jsonlite,fromJSON)
 importFrom(pkgcache,cran_archive_list)
 importFrom(pkgcache,meta_cache_list)
-importFrom(pkgcache,ppm_repo_url)
-importFrom(pkgcache,ppm_snapshots)
+importFrom(pkgcache,repo_resolve)
 importFrom(pkgdepends,as_pkg_dependencies)
 importFrom(pkgdepends,new_pkg_deps)
 importFrom(pkgdepends,new_pkg_installation_proposal)
@@ -65,6 +64,5 @@ importFrom(rcmdcheck,rcmdcheck)
 importFrom(remotes,github_remote)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
-importFrom(utils,head)
 importFrom(utils,installed.packages)
 importFrom(withr,defer)
