handle NA and future dates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(gh,gh_gql)
 importFrom(jsonlite,fromJSON)
 importFrom(pkgcache,cran_archive_list)
 importFrom(pkgcache,meta_cache_list)
+importFrom(pkgcache,ppm_snapshots)
 importFrom(pkgcache,repo_resolve)
 importFrom(pkgdepends,as_pkg_dependencies)
 importFrom(pkgdepends,new_pkg_deps)
