--- a/.github/workflows/scheduled.yaml
+++ b/.github/workflows/scheduled.yaml
@@ -48,14 +48,15 @@ jobs:
     uses: insightsengineering/r.pkg.template/.github/workflows/branch-cleanup.yaml@main
     secrets:
       REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
-  revdepcheck:
-    if: >
-      github.event_name == 'schedule' || (
-        github.event_name == 'workflow_dispatch' &&
-        inputs.chosen-workflow == 'revdepcheck'
-      )
-    name: revdepcheck ↩️
-    uses: insightsengineering/r.pkg.template/.github/workflows/revdepcheck.yaml@main
+  # disable until the first release
+  # revdepcheck:
+  #   if: >
+  #     github.event_name == 'schedule' || (
+  #       github.event_name == 'workflow_dispatch' &&
+  #       inputs.chosen-workflow == 'revdepcheck'
+  #     )
+  #   name: revdepcheck ↩️
+  #   uses: insightsengineering/r.pkg.template/.github/workflows/revdepcheck.yaml@main
   rhub:
     if: >
       github.event_name == 'schedule' || (
@@ -63,4 +64,4 @@ jobs:
         inputs.chosen-workflow == 'rhub'
       )
     name: R-hub 🌐
-    uses: insightsengineering/r.pkg.template/.github/workflows/rhub.yaml@main
+    uses: insightsengineering/r.pkg.template/.github/workflows/rhub.yaml@rhub_skip_quarto
