use released pkgcache; add rmarkdown to vignettebuilder

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Imports:
     desc (>= 1.2),
     gh (>= 1.1.0),
     jsonlite,
-    pkgcache (>= 2.2.2.9000),
+    pkgcache (>= 2.2.3),
     pkgdepends (>= 0.5.0),
     rcmdcheck,
     remotes (>= 2.2.0),
@@ -32,8 +32,6 @@ Suggests:
     pingr,
     rmarkdown (>= 2.23),
     testthat (>= 3.1.9)
-Remotes:
-    r-lib/pkgcache
 Config/Needs/verdepcheck:
     r-lib/cli,
     r-lib/desc,
@@ -48,7 +46,8 @@ Config/Needs/verdepcheck:
     r-lib/pingr,
     r-lib/testthat
 VignetteBuilder:
-    knitr
+    knitr,
+    rmarkdown
 Encoding: UTF-8
 Language: en-US
 LazyData: true
